[tool.poetry]
name = "parlay-tracker-backend"
version = "0.1.0"
description = "Backend API for fetching sports data and tracking parlays"
authors = ["kulkarks <ketan.s.kulkarni56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ariadne = "^0.26.1"
fastapi = "^0.115.12"
nba_api = "^1.9.0"
black = "^25.1.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
